# mwc-pedprog-unit02-lab03

./: .gitignore  play_uno.py  pyproject.toml  test_uno.py  train_uno.py
uno/: decks.py
uno/model/: card.py  game.py  rules.py
uno/player/: computer.py  custom.py  example.py  human.py  reinforcement.py
uno/view/: terminal.py  web.py
uno/view/static/: style.css
uno/view/templates/: playable_card.html  playable_wild_card.html  uno.html
